feat: complete TURATH RAG backend with LoRA MLX integration and clean target folder